--- a/attackWeb/index.html
+++ b/attackWeb/index.html
@@ -22,7 +22,11 @@
                 redirect: 'follow'
             })
             .then(response => response.text())
-            .then(result => console.log(result))
+            .then(result => 
+             {
+                console.log(result);
+                window.location.reload();
+             })
             .catch(error => console.log('error', error));
         }
 
